# turnero

./: .gitignore  dist.env  package-lock.json  pyproject.toml  pyrightconfig.json
app/: settings.py  urls.py
templates/: url_index.html
templates/cotton/button/: index.html
templates/cotton/card/: index.html
templates/cotton/date_picker/: index.html
templates/cotton/form/: card.html  error.html  label.html
templates/cotton/h1/: index.html
templates/cotton/input/: index.html  index~.html
templates/cotton/select/: index.html
templates/cotton/select2/: index.html
templates/cotton/selectsearch/: index.html
theme/static_src/: package-lock.json  package.json
theme/static_src/src/: styles.css
turnero/: adapters.py  admin.py  agent.py  apps.py  debug_urls.py  debug_views.py  forms.py  managers.py  models.py  querys.py  urls.py  utils.py  views.py  widgets.py
turnero/management/commands/: seed_database.py
turnero/scripts/: prepagas.py
turnero/templates/: base.html  base2.html  landing.html  signup_pacientes.html  url_index.html
turnero/templates/account/: signup.html  signup_doctores.html  signup_pacientes.html
turnero/templates/agent/: index.html
turnero/templates/agent/partials/: response.html
turnero/templates/allauth/layouts/: base.html
turnero/templates/components/: form.html  form_field.html
turnero/templates/doctores/: turnos.html
turnero/templates/pacientes/: turno_list_page.html
turnero/templates/pacientes/partials/: lista_turnos.html  reserva_confirmada.html  revisar_turno.html
turnero/templates/widgets/: multi_select.html
