[project]
name = "turnero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arrow==1.3.0",
    "asgiref==3.9.1",
    "binaryornot==0.4.4",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "cookiecutter==2.6.0",
    "cryptography==45.0.5",
    "django==5.2.4",
    "django-allauth-ui==1.8.1",
    "django-allauth[google,socialaccount]==65.10.0",
    "django-browser-reload==1.18.0",
    "django-cotton==2.1.3",
    "django-htmx>=1.23.2",
    "django-stubs>=5.2.2",
    "django-stubs-ext>=5.2.2",
    "django-tailwind==4.2.0",
    "django-widget-tweaks==1.5.0",
    "honcho==2.0.0",
    "idna==3.10",
    "jinja2==3.1.6",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "oauthlib==3.3.1",
    "pycparser==2.22",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "python-dateutil==2.9.0.post0",
    "python-slugify==8.0.4",
    "pyyaml==6.0.2",
    "requests==2.32.4",
    "rich==14.1.0",
    "six==1.17.0",
    "slippers==0.6.2",
    "sqlparse==0.5.3",
    "text-unidecode==1.3",
    "typeguard==2.13.3",
    "types-python-dateutil==2.9.0.20250809",
    "typing-extensions==4.14.1",
    "urllib3==2.5.0",
]


[tool.djlint]
profile="django"

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.0.0",
    "django-fastdev>=1.13.0",
    "django-tailwind[reload]>=4.2.0",
]
